# securefs

./: .travis.yml  CMakeLists.txt
sources/: commands.cpp  file_table.cpp  files.cpp  files.h  format.cpp  format.h  operations.cpp  operations.h  streams.cpp  streams.h  utils.cpp  utils.h  vfs.cpp  vfs.h  xattr_compat.h
test/: test_streams.cpp  test_utils.cpp
